--- a/about.html
+++ b/about.html
@@ -136,6 +136,7 @@
 <!-- Page Title Starts -->
 <section class="title-section text-left text-sm-center revealator-slideup revealator-once revealator-delay1">
     <h1>ABOUT <span>ME</span></h1>
+    <span class="title-bg">Resume</span>
 </section>
 <!-- Page Title Ends -->
 <!-- Main Content Starts -->
@@ -149,7 +150,7 @@
                         <h3 class="text-uppercase custom-title mb-0 ft-wt-600">personal infos</h3>
                     </div>
                     <div class="col-12 d-block d-sm-none">
-                        <img src="img/img-mobile.jpg" class="img-fluid main-img-mobile" alt="my picture" />
+                        <img src="img/img-mobile.png" class="img-fluid main-img-mobile" alt="my picture" />
                     </div>
                     <div class="col-6">
                         <ul class="about-list list-unstyled open-sans-font">
